# rs_refills

./: CMakeLists.txt  README.md  example_query.txt  package.xml
config/: config_flir_arrina.ini  config_flir_donbot.ini  config_realsense_donbot.ini  config_refills.yaml  config_refills_mongo.ini  semantic_map_refills.yaml
descriptors/analysis_engines/: refills.xml  refills.yaml  refills_pnp.yaml  scenario3_demo.yaml
descriptors/annotators/: BarcodeScanner.xml  BarcodeScanner.yaml  FacingAnnotator.yaml  ImageSaver.yaml  MisplacedItemDetection.yaml  ProductCounter.xml  ProductCounter.yaml  SeparatorScanner.xml  SeparatorScanner.yaml  ShelfDetector.xml  ShelfDetector.yaml
descriptors/typesystem/: all_types.xml  refills_types.xml
include/rs_refills/: common_structs.h  facing.h  knowrob_queries.h
include/rs_refills/types/: all_types.h  type_definitions.h
launch/: publish_shelf_systems.launch  refills_pnp.launch  rs_refills.launch  rs_refills_with_json_prolog.launch  rs_scenario3_pnp_from_table.launch
src/: BarcodeScanner.cpp  FacingAnnotator.cpp  ImageSaver.cpp  MisplacedItemDetection.cpp  ProductCounter.cpp  SeparatorScanner.cpp  ShelfDetector.cpp  run.cpp
test_data/: gtin_4000125077310_1540829839145140062_meta.json  gtin_4002448028284_1540830116157720190_meta.json  gtin_4002448028284_1540830124663403120_meta.json  gtin_4002448046424_1540829905187972601_meta.json  gtin_4002448053569_1540829944212752445_meta.json  gtin_4002448065111_1540829897682342022_meta.json  gtin_4002448083375_1540830132334797428_meta.json  gtin_4002448107736_1540829831140426597_meta.json  gtin_4010355055286_1540830044110413480_meta.json  gtin_4010355055286_1540830052115462716_meta.json  gtin_4010355055798_1540830011089170100_meta.json  gtin_4010355100054_1540829952885548441_meta.json  gtin_4010355100054_1540829959390789969_meta.json  gtin_4010355100054_1540829967561169414_meta.json  gtin_4010355101143_1540829791615914687_meta.json  gtin_4010355101143_1540829798618663681_meta.json  gtin_4010355101167_1540829814628939869_meta.json  gtin_4010355215321_1540830003083651842_meta.json  gtin_4010355250308_1540829823301285147_meta.json  gtin_4010355295224_1540830037772796300_meta.json  gtin_4010355295248_1540830028099729436_meta.json  gtin_4010355319968_1540829873833662897_meta.json  gtin_4010355319982_1540830019094866060_meta.json  gtin_4010355326508_1540829881838942463_meta.json  gtin_4010355326508_1540829889845653178_meta.json  gtin_4015000960847_1540829782276629098_meta.json  gtin_4015000962728_1540830088639805595_meta.json  gtin_4015000962940_1540830106484136904_meta.json  gtin_4015000962964_1540830097811686931_meta.json  gtin_8001090168795_1540829806624578172_meta.json
