<?xml version="1.0"?>
<package format="2">
  <name>rs_refills</name>
  <version>0.0.0</version>
  <description>The refills robosherlock package</description>

  <maintainer email="balintbe@cs.uni-bremen.de">Ferenc Balint-Benczedi</maintainer>

  <license>Apache 2.0</license>

  <author email="balintbe@cs.uni-bremen.de">Ferenc Balint-Benczedi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robosherlock</depend>
  <depend>refills_msgs</depend>
  <depend>rosprolog</depend>
  <depend>refills_models</depend>

  <export>
  </export>
</package>
